--- a/infrastructure/provisioning/roles/elk-kibana/templates/kibana.yml.j2
+++ b/infrastructure/provisioning/roles/elk-kibana/templates/kibana.yml.j2
@@ -25,7 +25,7 @@ server.host: {{kibana_server}}
 server.name: "kibana"
 
 # The URLs of the Elasticsearch instances to use for all your queries.
-elasticsearch.hosts: ["{{elasticsearch_server}}"]
+elasticsearch.hosts: 0.0.0.0
 
 # When this setting's value is true Kibana uses the hostname specified in the server.host
 # setting. When the value of this setting is false, Kibana uses the hostname of the host
